--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "mysql.h": "c"
     },
-    "cmake.sourceDirectory": "/home/hhhh123/kuIotBigdata/python_C_mysql"
+    "cmake.sourceDirectory": "/home/hhhh123/kuIotBigdata/python_C_mysql",
+    "cmake.configureOnOpen": true
 }
